# v3-save-analyzer

./: .gitignore  README.md  requirements.txt
tests/: test_e2e.py  test_parser.py
v3analyzer/: __init__.py  __main__.py  cli.py  extractor.py  generate_sample.py  generator.py  loader.py  mapgen.py  parser.py  server.py
v3analyzer/templates/: dashboard.html
wasm-melter/: Cargo.toml
wasm-melter/src/: lib.rs
web/: index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.ts
web/public/: map_data.json
web/public/wasm/: v3_wasm_melter.d.ts  v3_wasm_melter.js  v3_wasm_melter_bg.wasm  vic3_tokens.txt
web/src/: army.ts  extractor.ts  generator.ts  loader.ts  main.ts  parser.ts  style.css  treemap.ts  types.ts
