[package]
name = "v3-wasm-melter"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
jomini= { version = "0.34", features = ["envelope"] }
vic3save = { git = "https://github.com/pdx-tools/pdx-tools.git" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
